[package]
name = "linker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../../crates/lume_errors" }
lume_span = { path = "../../crates/lume_span" }

ar = { version = "0.9.0" }
cfg-if = { version = "1.0.4" }
clap = { workspace = true }
derive_more = { version = "2.1.1", features = ["full"] }
derive-where = { version = "1.6.0" }
error_snippet = { workspace = true }
indexmap = { workspace = true }
levenshtein = { version = "1.0.5" }
object = { version = "0.37", features = ["read"] }

# Used for parsing macOS .tbd files
[target.'cfg(target_os = "macos")'.dependencies]
serde = { workspace = true, features = ["derive"] }
serde-saphyr = { version = "0.0.14" }

# Reading the memory page size
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.180" }

# Parsing search paths from LD
[target.'cfg(target_os = "linux")'.dependencies]
regex = { version = "1.11.1" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi"] }

[build-dependencies]
cc = { version = "1.2" }

[lints]
workspace = true
