[package]
name = "lume_jit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../../crates/lume_errors" }
lume_gc = { path = "../lume_gc" }
lume_mir = { path = "../../compiler/lume_mir" }
lume_runtime = { path = "../lume_runtime" }
lume_session = { path = "../../compiler/lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_trace = { path = "../../crates/lume_trace" }
lume_type_metadata = { path = "../../compiler/lume_type_metadata" }

gimli = { version = "0.32.3", features = ["write"] }
indexmap = { workspace = true }
libc = { version = "*" }
postcard = { version = "=1.1.3", features = ["alloc"] }
object = { version = "0.37", features = ["read", "write"] }
serde = { workspace = true, features = ["derive"] }
target-lexicon = { version = "=0.13.2" }
tracing = { workspace = true }

cranelift = "=0.123.2"
cranelift-codegen = { version = "=0.123.2", features = ["unwind"] }
cranelift-jit = "=0.123.2"
cranelift-module = "=0.123.2"
cranelift-native = "=0.123.2"

[features]
tracing = ["lume_trace/enable"]

[lints]
workspace = true
